# LowLevelLangs

./: .gitignore  CMakeLists.txt  README.md  functions.asm  pointerTest  testc  testc.asm
Assembly/Automat/: automat_data.asm
Assembly/MemoryOperations/: general_functions.asm
Assembly/ParkingLot/: general_functions.asm  print_functions.asm
Assembly/SP_Automat/: AnotherAutomatInBashFormat.sh  README.md  main  main.asm  print_functions.asm
Assembly/processForking/: makefile
Assembly/readUserInput/: makefile  readInput.asm
Assembly/schoolTesting/: random_seed_test.asm  testc.asm
Automat/: automat  automat.asm  automat_data.asm  functions.asm  user_interface.asm
C/gtkTesting/: CMakeLists.txt
C/sypaniNaVarku/: CMakeLists.txt
C/sypaniNaVarku/src/: main.c
C/sypaniNaVarku/src/gui/: main_window.glade
C/sypaniNaVarku/src/include/: gui_handler.h
C/sypaniNaVarku/src/libs/: gui_handler.c
Fonty/Models/: FontSetter.h  Substring.h
HeaderFiles/: A.h  B.h  C.h  Polotovar.h  Stroj.h
MemoryOperations/: free.asm  general_functions.asm  main  main.asm  malloc.asm
Model/: A.cpp  B.cpp  C.cpp  FinalProduct.cpp  Polotovar.cpp  Stroj.cpp
ParkingLot/: general_functions.asm  main  main.asm  malloc.asm  memory_functions.asm
SP_Automat/: main.asm
STM32/: README.md
STM32/a1/: main.cpp
STM32/a2/: .hg_archival.txt  main.cpp
a1/: main.cpp
a2/: main.cpp
cpluplus/: main.cpp
cpluplus/Fonty/: CMakeLists.txt  main.cpp
cpluplus/HeaderFiles/: FinalProduct.h
cpluplus/Model/: A.cpp  B.cpp
cpluplus/banka-v1/: CMakeLists.txt
cpluplus/banka-v1/login_page/: CMakeLists.txt  main.cpp
cpluplus/banka-v1/src/: main.cpp
cpluplus/banka-v1/src/models/: bank.cpp  currency.cpp  user_account.cpp
cpluplus/banka-v1/src/models/headers/: ExchangeRates.h  bank.h  currency.h  user_account.h
cpluplus/banka-v1/src/services/: BusinessLogic.cpp  business_logic.cpp  business_logic.h  site_functionality.h
cpluplus/banka-v1/user_accounts/: user1
cpluplus/maven_tests/: main.cpp  (+3 more)
helloWorld/: .gitignore  hello.asm  macros.asm  makefile  test.asm
processForking/: main.asm
schoolTesting/: pointerTest.asm  print_functions.asm  random_seed_test.asm
(+18 files in other folders)
